# simple_ota_example_testing

./: CMakeLists.txt  partitions_02.csv
main/: CMakeLists.txt  LED02.c  LED04.c
